--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
@@ -9,7 +9,7 @@
 
 <body>
 	
-	<h1>Welory Aviasales</h1>
+	<h1>WeloryAviasales</h1>
 	<main>
 		<section class="wrapper">
 			<form class="form-search">
