--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 	<title>WeloryAviasales</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	
-	<h1>WeloryAviasales</h1>
+	<h1>WeloryIT|Aviasales</h1>
 	<main>
 		<section class="wrapper">
 			<form class="form-search">
@@ -60,7 +58,6 @@
 		</section>
 
 	</main>
-
 </body>
 
 </html>
